[package]
name = "llmscope"
version = "0.1.0"
edition = "2024"
description = "Wireshark for LLM traffic — a zero-config local proxy with a top-style TUI"
license = "MIT"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = true
